--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,6 @@
-KOODISTO_SERVICE_URL=https://virkailija.testiopintopolku.fi/koodisto-service/rest/json
-EPERUSTEET_AMOSAA_URL=https://virkailija.testiopintopolku.fi/eperusteet-amosaa-service/api/julkinen
+KOODISTO_SERVICE_URL=https://virkailija.opintopolku.fi/koodisto-service/rest/json
+EPERUSTEET_AMOSAA_URL=https://virkailija.opintopolku.fi/eperusteet-amosaa-service/api/julkinen
 FINTO_URL=http://api.finto.fi/rest/v1
 KOODISTOT_SUOMI_URL=https://koodistot.suomi.fi/codelist-api/api/v1/coderegistries
-ORGANISAATIO_SERVICE_URL=https://virkailija.testiopintopolku.fi/organisaatio-service/rest
+ORGANISAATIO_SERVICE_URL=https://virkailija.opintopolku.fi/organisaatio-service/rest
 EPERUSTEET_SERVICE_URL=https://virkailija.opintopolku.fi/eperusteet-service/api
-
-REDIS_EXPIRE_TIME=86400
