Winston logger configuration to replace console logging

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
+# Application
+LOG_LEVEL=debug
+
+# Configuration
+CALLERID_OID=1.2.246.562.10.2013112012294919827487
+CALLERID_SERVICE=aoe
+
+# Semantic APIs
 KOODISTO_SERVICE_URL=https://virkailija.opintopolku.fi/koodisto-service/rest/json
 EPERUSTEET_AMOSAA_URL=https://virkailija.opintopolku.fi/eperusteet-amosaa-service/api/julkinen
 FINTO_URL=http://api.finto.fi/rest/v1
@@ -5,10 +13,8 @@ KOODISTOT_SUOMI_URL=https://koodistot.suomi.fi/codelist-api/api/v1/coderegistrie
 ORGANISAATIO_SERVICE_URL=https://virkailija.opintopolku.fi/organisaatio-service/rest
 EPERUSTEET_SERVICE_URL=https://virkailija.opintopolku.fi/eperusteet-service/api
 
+# Redis Database
 REDIS_EXPIRE_TIME=86400
 REDIS_HOST=
 REDIS_PORT=
 REDIS_PASS=
-
-CALLERID_OID=1.2.246.562.10.2013112012294919827487
-CALLERID_SERVICE=aoe
