--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,10 @@
-FROM node:14.18-bullseye
-WORKDIR '/app'
-ADD ./ /app
+FROM node:16.13.0-alpine
+COPY . /app
+WORKDIR /app
 
-# Install only locked dependencies in yarn.lock (faster).
-RUN yarn install --frozen-lockfile && \
-    yarn build
+# Install only locked dependency versions defined in package-lock.json.
+RUN npm ci && \
+    npm run build
 
+EXPOSE 3000
+CMD ["node", "dist/server.js"]
